# orbits

./: .gitignore  Cargo.toml  anomaly.csv  asteroid_outline.py  chi.csv  game.exe - Shortcut.lnk  generate_ship_sprites.bat  ideas.md  orbit.csv  run.bat  sin_approx.csv  spacecraft.strl  spline.csv  sprites.pdn  thruster_ctrl.py  wheel.md
assets/: potential.wgsl  settings.yaml  ship_names.txt
game/: Cargo.toml
game/src/: args.rs  balls.rs  bounded.rs  button.rs  camera_controller.rs  camera_controls.rs  canvas.rs  craft.rs  debug.rs  debug_console.rs  drawing.rs  egui.rs  embedded.rs  game.rs  generate_ship_sprites.rs  graph.rs  grid_sprites.rs  input.rs  interactive.rs  inventory.rs  keybindings.rs  lib.rs  main.rs  mouse.rs  names.rs  new_input.rs  notifications.rs  onclick.rs  parts.rs  pixel_draw.rs  planetary.rs  player.rs  prelude.rs  scene.rs  settings.rs  sim_rate.rs  sounds.rs  sprites.rs  thrust_particles.rs  ui.rs  (+3 more)
game/src/commands/: command.rs  example.rs  list_vehicles.rs  mod.rs  utilities.rs
game/src/craft_editor/: cursor_state.rs  editor.rs  mod.rs  part_ui.rs  welding_particle.rs
game/src/scenes/: comms.rs  craft_editor.rs  main_menu.rs  mod.rs  orbital.rs  render.rs  rpo.rs  scene.rs  surface.rs  telescope.rs
layout/: Cargo.toml
scripts/: fit.py  plot.py  ship_sprites.bash
server/: Cargo.toml  index.html
starling/: Cargo.toml  chi.csv  out.csv  tank.yaml  thruster.yaml
starling/benches/: benchmarks.rs
starling/src/: aabb.rs  belts.rs  bezier.rs  big_parts.rs  canonical.rs  casts.rs  construction_bot.rs  control.rs  control_signals.rs  core.rs  entities.rs  examples.rs  factory.rs  file_export.rs  global_position.rs  id.rs  inventory.rs  lib.rs  math.rs  nanotime.rs  orbit.rs  orbital_luts.rs  orbiter.rs  orbits.rs  pid.rs  planning.rs  plants.rs  prelude.rs  propagator.rs  pv.rs  quantities.rs  region.rs  rigid_body.rs  rpo.rs  scenario.rs  sim_time.rs  surface.rs  take.rs  tests.rs  thrust_particles.rs  (+4 more)
starling/src/factory/: factory.rs  inventory.rs  mass.rs  mod.rs  plant.rs  recipes.rs  storage.rs
starling/src/orbits/: misc.rs  mod.rs  sparse_orbit.rs  universal.rs
starling/src/parts/: cargo.rs  generic.rs  gyro.rs  instance.rs  machine.rs  magnetorquer.rs  mod.rs  parts.rs  radar.rs  rotation.rs  tank.rs  thruster.rs
starling/src/terrain/: terrain.rs
starling/src/vehicle/: connectivity_group.rs  file_storage.rs  instance_ref.rs  mod.rs  rigid_body.rs  sprite_generation.rs  vehicle.rs  vehicle_control.rs  vehicle_tests.rs
vehicles/: dingus.vehicle  lander.vehicle  manta.vehicle  (+3 more)
(+52 files in other folders)
