[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_dylib = "0.15.0-rc.3"
bevy_dev_tools = "0.15.0"
bevy_egui = "0.33.0"
bevy_vector_shapes = "0.9.2"
chrono = "0.4.39"
lazy_static = "1.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
starling = { path = "../starling" }
layout = { path = "../layout" }
names = "0.14.0"
rfd = "0.15.3"
enum-iterator = "2.1.0"
serde_yaml = "0.9.34"
serde = "1.0.219"
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
project-root = "0.2.2"
compile-time = "0.2.0"
textwrap = "0.16.2"
shellwords = "1.1.0"
