[package]
name = "starling"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
chrono = "0.4.39"
criterion = "0.5.1"
csv = "1.3.1"
glam = { version = "0.29.2", features = ["serde"] }
more-asserts = "0.3.1"
rand = "0.8.5"
rootfinder = "0.2.1"
serde = "1.0.218"
splines = { version = "4.4.2", features = ["glam"] }
toml = "0.8.20"
uom = "0.36.0"

[[bin]]
name = "export_signals"
path = "bin/export_signals.rs"

[[bench]]
name = "benchmark"
path = "benches/benchmarks.rs"
harness = false
