[package]
name = "starling"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
assert_float_eq = "1.1.4"
chrono = "0.4.39"
clap = { version = "4.5.41", features = ["derive"] }
criterion = "0.5.1"
csv = "1.3.1"
enum-iterator = "2.1.0"
glam = { version = "0.29.2", features = ["serde"] }
image = "0.25.6"
lazy_static = "1.5.0"
lsystem = "0.2.1"
more-asserts = "0.3.1"
names = "0.14.0"
noise = "0.9.0"
rand = "0.8.5"
rootfinder = "0.2.1"
serde = "1.0.218"
serde_yaml = "0.9.34"
splines = { version = "4.4.2", features = ["glam"] }

[[bench]]
name = "benchmark"
path = "benches/benchmarks.rs"
harness = false

[[bin]]
name = "ship2png"
path = "bin/ship2png.rs"

[[bin]]
name = "ast2png"
path = "bin/ast2png.rs"
